# data-piecewise-affine-lower-bounding

./: Makefile  README.md  how_to_setup_cplex.md  pixi.toml
generate_data/: Cargo.toml
generate_data/src/: main.rs
isd_data/: convert_csv_to_json.py  isd_stations.txt  isd_stations_selected.txt
isd_data/aggregated_by_station/: 010013-99999.csv
run_benchmarks/from_python/: main.py  pyproject.toml
run_benchmarks/from_r/: main.r
run_benchmarks/from_rust/: Cargo.toml  build.rs
run_benchmarks/from_rust/src/: main.rs
