[package]
name = "generate_data"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytemuck = "1.21.0"
itertools = "0.14.0"
log = "0.4.25"
mimalloc = "0.1.43"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
# rand-distributions = "0.1.2"
rand_distr = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
