[package]
name = "from_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
good_lp = { version = "1.14.0", features = [
    "highs",
    "clarabel",
    "cplex-rs",
], default-features = false }
ordered-float = { version = "5.0.0" }
pretty_env_logger = "0.5.0"
#l1line_rs = { path = "../../../../l1line_rs" }
palb = { version = "0.1.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
polars = "0.52.0"
itertools = "0.14.0"
indicatif = "0.18.2"
rand = "0.9.0"
log = "0.4.28"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"

[profile.release]
lto = "thin"
#codegen-units = 1
panic = "abort"
